# GhostTaskRemind

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
GBase/: build.gradle.kts
GBase/src/main/java/me/ghost233/gbase/: BaseConfig.kt
GStorage/: build.gradle.kts
GStorage/src/main/java/me/ghost233/gstorage/: KVUtils.kt
LogTool/: build.gradle.kts
LogTool/src/main/cpp/: CMakeLists.txt  JNIDefer.h  LogFileCTypeBridge.cpp  LogFileMmapBridge.cpp  LogHelper.cpp  LogHelper.h
LogTool/src/main/cpp/src/: LogFile.cpp  LogFile.h  LogFileCType.cpp  LogFileCType.h  LogFileMmap.cpp  LogFileMmap.h
LogTool/src/main/java/me/ghost233/logtool/: LogHelper.kt  LogTool.kt
LogTool/src/main/proto/: log_protocol.proto
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/schemas/me.ghost233.ghosttaskremind.model.taskhistory.TaskHistoryDatabase/: 1.json
app/schemas/me.ghost233.ghosttaskremind.model.tasktype.TaskTypeDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: fragment_dashboard.xml  fragment_home.xml  fragment_new_task.xml  fragment_setting.xml  fragment_task_list.xml  layout_add_new_task_recycle_view_subview.xml  layout_setting_recycle_view_subview.xml  layout_task_list_recycle_view_subview.xml  layout_toast.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
